# HW2

./: Dockerfile
HW 2/: pyproject.toml
HW2/: Helpy.py  pyproject.toml
