[tool.poetry]
name = "helpy-py"
version = "0.1.0"
description = "Python project personal asistant"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "helpy"}]

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
